--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "history": "^2.0.1",
     "immutable": "^3.7.6",
     "react": "^0.14.2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
@@ -18,10 +20,14 @@
     "babel-core": "^6.7.2",
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-decorators": "^6.8.0",
+    "babel-plugin-transform-decorators": "^6.8.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.7.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.5.3",
     "css-loader": "^0.23.1",
@@ -55,7 +61,11 @@
     "presets": [
       "es2015",
       "react",
-      "stage-0"
+      "stage-0",
+      "stage-1"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
     ]
   },
   "scripts": {
